# based-protocol

./: .gitignore  Anchor.toml  add_whitepaper_github.sh  check-state.js  complete_homepage_fix.sh  complete_rebrand_final.sh  comprehensive_update.sh  fix_mobile_complete.sh  initialize-vault.js  middleware.ts  netlify.toml  next.config.mjs  package-lock.json  package.json  rebrand_complete.sh  sentry.client.config.ts  start-dev.sh  test-deposit.ts  test-live.ts  test-stake.sh  test-usdc-stake.js  test-wallet.json  update_stake_roadmap.sh  withdraw-treasury.ts
app/: globals.css  layout.tsx  page.tsx  page.tsx.backup_complete  page.tsx.backup_contrast  page.tsx.backup_final  page.tsx.backup_pool  providers.tsx
based-frontend/: add_pool_selector.sh  check_mobile_responsive.sh  complete_rebrand_phase2.sh  final_updates.sh  fix_countdown_contrast.sh  lib.rs  package-lock.json  package.json  rebrand_all.sh  remove_leaderboard_update_home.sh  tailwind.config.js  token_staking.rs  update_faq.sh  update_faq_howitworks_tone.sh  update_launch_date.sh  update_remaining.sh  update_whitepaper_professional.sh
components/: MobileNav.tsx  Navigation.tsx  WalletButton.tsx  WalletProvider.tsx
lib/: anchorWallet.ts  config.ts  connection.ts  contract.ts  etf-contract.ts  idl.json  rpc-config.ts  staking.ts  test-rpc.ts  usdc-staking.ts  userProgress.ts
programs/based-protocol/: Cargo.toml
programs/based-protocol/src/: lib.rs  lib.rs.backup  lib.rs.backup2  token_staking.rs
scripts/: check-state.js  test-real-staking.ts  test-stake-raw.js  test-stake.ts  withdraw.ts
(+57 files in other folders)
